{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 26,
  "lineage": "56276809-ccaa-1107-29d5-e20f6bb04b7e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:539397078816:security-group/sg-091661cd69a3be865",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-091661cd69a3be865",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sre-monitoring-alb-sg",
            "name_prefix": "",
            "owner_id": "539397078816",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-054a5e6a3b6c64a1f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "539397078816",
            "id": "sg-091661cd69a3be865",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:539397078816:security-group/sg-08e2d75ba2a632dde",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08e2d75ba2a632dde",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sre-monitoring-app-sg",
            "name_prefix": "",
            "owner_id": "539397078816",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-054a5e6a3b6c64a1f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "539397078816",
            "id": "sg-08e2d75ba2a632dde",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:539397078816:loadbalancer/app/sre-monitoring-lb-lb/09fb8bbb1d7a6681",
            "arn_suffix": "app/sre-monitoring-lb-lb/09fb8bbb1d7a6681",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "sre-monitoring-lb-lb-874588603.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:539397078816:loadbalancer/app/sre-monitoring-lb-lb/09fb8bbb1d7a6681",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "sre-monitoring-lb-lb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-091661cd69a3be865"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01ffa3522c1d0279e"
              },
              {
                "subnet_id": "subnet-02ac11705dfa64e66"
              }
            ],
            "subnets": [
              "subnet-01ffa3522c1d0279e",
              "subnet-02ac11705dfa64e66"
            ],
            "vpc_id": "vpc-054a5e6a3b6c64a1f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:539397078816:loadbalancer/app/sre-monitoring-lb-lb/09fb8bbb1d7a6681"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:539397078816:listener/app/sre-monitoring-lb-lb/09fb8bbb1d7a6681/44536807d2461f78",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:539397078816:targetgroup/sre-monitoring-lb-tg/0cde5c9b140d5de1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:539397078816:listener/app/sre-monitoring-lb-lb/09fb8bbb1d7a6681/44536807d2461f78",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:539397078816:loadbalancer/app/sre-monitoring-lb-lb/09fb8bbb1d7a6681",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:539397078816:listener/app/sre-monitoring-lb-lb/09fb8bbb1d7a6681/44536807d2461f78"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "module.load_balancer.aws_lb.lb",
            "module.load_balancer.aws_lb_target_group.lb_target_group",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:539397078816:targetgroup/sre-monitoring-lb-tg/0cde5c9b140d5de1",
            "arn_suffix": "targetgroup/sre-monitoring-lb-tg/0cde5c9b140d5de1",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:539397078816:targetgroup/sre-monitoring-lb-tg/0cde5c9b140d5de1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "sre-monitoring-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-054a5e6a3b6c64a1f"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:539397078816:targetgroup/sre-monitoring-lb-tg/0cde5c9b140d5de1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-002d71c2f939e46e2",
            "arn": "arn:aws:ec2:us-east-1:539397078816:elastic-ip/eipalloc-002d71c2f939e46e2",
            "domain": "vpc",
            "id": "eipalloc-002d71c2f939e46e2",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-193-135-243.compute-1.amazonaws.com",
            "public_ip": "44.193.135.243",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "sre-monitoring-nat-eip"
            },
            "tags_all": {
              "Name": "sre-monitoring-nat-eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "539397078816",
            "id": "eipalloc-002d71c2f939e46e2",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:539397078816:internet-gateway/igw-049a8e2dd6e2fe3de",
            "id": "igw-049a8e2dd6e2fe3de",
            "owner_id": "539397078816",
            "region": "us-east-1",
            "tags": {
              "Name": "sre-monitoring-igw"
            },
            "tags_all": {
              "Name": "sre-monitoring-igw"
            },
            "vpc_id": "vpc-054a5e6a3b6c64a1f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "539397078816",
            "id": "igw-049a8e2dd6e2fe3de",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-002d71c2f939e46e2",
            "association_id": "eipassoc-0314a59f997542868",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-03644c847032913dd",
            "network_interface_id": "eni-0052f7de3221d72e5",
            "private_ip": "10.0.10.202",
            "public_ip": "44.193.135.243",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01ffa3522c1d0279e",
            "tags": {
              "Name": "sre-monitoring-nat"
            },
            "tags_all": {
              "Name": "sre-monitoring-nat"
            },
            "vpc_id": "vpc-054a5e6a3b6c64a1f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "539397078816",
            "id": "nat-03644c847032913dd",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:539397078816:route-table/rtb-0f962656934e16098",
            "id": "rtb-0f962656934e16098",
            "owner_id": "539397078816",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03644c847032913dd",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sre-monitoring-private-rt"
            },
            "tags_all": {
              "Name": "sre-monitoring-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-054a5e6a3b6c64a1f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "539397078816",
            "id": "rtb-0f962656934e16098",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:539397078816:route-table/rtb-0b7915732b14004f1",
            "id": "rtb-0b7915732b14004f1",
            "owner_id": "539397078816",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-049a8e2dd6e2fe3de",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sre-monitoring-public-rt"
            },
            "tags_all": {
              "Name": "sre-monitoring-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-054a5e6a3b6c64a1f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "539397078816",
            "id": "rtb-0b7915732b14004f1",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0520d99bc338339ae",
            "region": "us-east-1",
            "route_table_id": "rtb-0f962656934e16098",
            "subnet_id": "subnet-080f3a5fe45b6b3db"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "539397078816",
            "id": "rtbassoc-0520d99bc338339ae",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bbc53aa78067de7c",
            "region": "us-east-1",
            "route_table_id": "rtb-0f962656934e16098",
            "subnet_id": "subnet-016d4e2ef57d2ea27"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "539397078816",
            "id": "rtbassoc-0bbc53aa78067de7c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b2d7fc35c542d07",
            "region": "us-east-1",
            "route_table_id": "rtb-0b7915732b14004f1",
            "subnet_id": "subnet-01ffa3522c1d0279e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "539397078816",
            "id": "rtbassoc-01b2d7fc35c542d07",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e7fc0e1cea42660d",
            "region": "us-east-1",
            "route_table_id": "rtb-0b7915732b14004f1",
            "subnet_id": "subnet-02ac11705dfa64e66"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "539397078816",
            "id": "rtbassoc-0e7fc0e1cea42660d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:539397078816:subnet/subnet-080f3a5fe45b6b3db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080f3a5fe45b6b3db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "539397078816",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "sre-monitoring-private-us-east-1a"
            },
            "tags_all": {
              "Name": "sre-monitoring-private-us-east-1a"
            },
            "vpc_id": "vpc-054a5e6a3b6c64a1f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "539397078816",
            "id": "subnet-080f3a5fe45b6b3db",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:539397078816:subnet/subnet-016d4e2ef57d2ea27",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-016d4e2ef57d2ea27",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "539397078816",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "sre-monitoring-private-us-east-1b"
            },
            "tags_all": {
              "Name": "sre-monitoring-private-us-east-1b"
            },
            "vpc_id": "vpc-054a5e6a3b6c64a1f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "539397078816",
            "id": "subnet-016d4e2ef57d2ea27",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:539397078816:subnet/subnet-01ffa3522c1d0279e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ffa3522c1d0279e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "539397078816",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "sre-monitoring-public-us-east-1a"
            },
            "tags_all": {
              "Name": "sre-monitoring-public-us-east-1a"
            },
            "vpc_id": "vpc-054a5e6a3b6c64a1f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "539397078816",
            "id": "subnet-01ffa3522c1d0279e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:539397078816:subnet/subnet-02ac11705dfa64e66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ac11705dfa64e66",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "539397078816",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "sre-monitoring-public-us-east-1b"
            },
            "tags_all": {
              "Name": "sre-monitoring-public-us-east-1b"
            },
            "vpc_id": "vpc-054a5e6a3b6c64a1f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "539397078816",
            "id": "subnet-02ac11705dfa64e66",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:539397078816:vpc/vpc-054a5e6a3b6c64a1f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d9077bcd2583fb77",
            "default_route_table_id": "rtb-0ba6337b20cb42bd0",
            "default_security_group_id": "sg-071821e22b2bfc4c1",
            "dhcp_options_id": "dopt-0b6ca4414786a600a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-054a5e6a3b6c64a1f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ba6337b20cb42bd0",
            "owner_id": "539397078816",
            "region": "us-east-1",
            "tags": {
              "Name": "sre-monitoring-vpc"
            },
            "tags_all": {
              "Name": "sre-monitoring-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "539397078816",
            "id": "vpc-054a5e6a3b6c64a1f",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}